--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,28 @@
   background-color: #242424;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+}
+
 #app {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+
+.legend {
+  margin: 1rem;
 }
 
 .legend__item {
@@ -25,6 +42,13 @@
 .legend__item-color {
   width: 1rem;
   height: 1rem;
+  margin: 0.5rem;
+}
+
+.instructions {
+  font-weight: bold;
+  font-style: italic;
+  text-transform: uppercase;
   margin: 0.5rem;
 }
 
